fix: simplify dark mode using next-themes

--- a/src/components/_shared/header/header.module.scss
+++ b/src/components/_shared/header/header.module.scss
@@ -13,7 +13,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: var(--theme-background-color);
+    // background-color: var(--theme-background-color);
     padding: $theme-unit * 2;
     margin-left: $theme-unit * 2;
     margin-right: $theme-unit * 2;
@@ -29,7 +29,7 @@
     max-width: $breakpoint-lx;
     width: 100%;
     margin: 0 auto;
-    background: var(--theme-background-color);
+    // background: var(--theme-background-color);
 
     display: flex;
     flex-direction: column;
@@ -142,7 +142,7 @@
           padding-bottom: 0px;
 
           ul {
-            background-color: var(--theme-background-color);
+            // background-color: var(--theme-background-color);
             border: 1px solid var(--theme-foreground-color);
             border-radius: $border-radius;
             padding: 0px;
